cmake_minimum_required(VERSION 3.12)
project(OneDenoiser)
if(NOT CMAKE_TOOLCHAIN_FILE)
  set(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake
    CACHE STRING "Vcpkg toolchain file")
endif()
set(CMAKE_CXX_STANDARD 17)
option(ENABLE_OIDN "BUILD OIDN" OFF)
option(ENABLE_OPTIX "BUILD OPTIX" OFF)
set(OIDN_APPS OFF CACHE BOOL "")
find_package(IlmBase CONFIG REQUIRED)
find_package(OpenEXR CONFIG REQUIRED)
find_package(OpenImageIO CONFIG REQUIRED)
find_package(spdlog CONFIG REQUIRED)
find_package(cxxopts CONFIG REQUIRED)
add_executable(one-denoiser main.cpp)
target_link_libraries(one-denoiser PRIVATE OpenImageIO::OpenImageIO  OpenImageIO::OpenImageIO_Util
    spdlog::spdlog spdlog::spdlog_header_only cxxopts::cxxopts)
if(ENABLE_OIDN)
    add_subdirectory(oidn)
    target_compile_definitions(one-denoiser PRIVATE ENABLE_OIDN)
    target_link_libraries(one-denoiser PRIVATE OpenImageDenoise)
endif()